--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -11,7 +11,7 @@
         <dependency>
             <groupId>org.subtlelib</groupId>
             <artifactId>poi.builder</artifactId>
-            <version>0.1.1-SNAPSHOT</version>
+            <version>0.1.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -22,6 +22,11 @@
             <groupId>org.jadira.usertype</groupId>
             <artifactId>usertype.jodatime</artifactId>
             <version>1.9.1</version>
+        </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.1</version>
         </dependency>
     </dependencies>
 
