--- a/core/pom.xml
+++ b/core/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>org.subtlelib</groupId>
     <artifactId>poi.builder</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>POI builder</name>
@@ -43,7 +43,7 @@
         <connection>scm:git:https://github.com/subtlelib/poi.git</connection>
         <developerConnection>scm:git:https://github.com/subtlelib/poi.git</developerConnection>
         <url>https://github.com/subtlelib/poi</url>
-      <tag>poi.builder-1.0.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <distributionManagement>
