--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -1,34 +1,41 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.subtlelib</groupId>
-    <artifactId>examples</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <parent>
+        <groupId>org.subtlelib</groupId>
+        <artifactId>poi.builder.parent</artifactId>
+        <version>1.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+
+    <artifactId>poi.builder.examples</artifactId>
+
+    <name>POI builder examples</name>
+    <description>Usage examples for POI builder library</description>
+    <url>https://github.com/subtlelib/poi</url>
+
+    <properties>
+        <joda.time.version>2.3</joda.time.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.subtlelib</groupId>
             <artifactId>poi.builder</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>14.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jadira.usertype</groupId>
-            <artifactId>usertype.jodatime</artifactId>
-            <version>1.9.1</version>
         </dependency>
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
-            <version>2.1</version>
+            <version>${joda.time.version}</version>
         </dependency>
     </dependencies>
-
 
 </project>
