--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.subtlelib</groupId>
     <artifactId>poi.builder.parent</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
     <packaging>pom</packaging>
 
     <name>POI builder parent</name>
@@ -47,7 +45,8 @@
         <connection>scm:git:https://github.com/subtlelib/poi.git</connection>
         <developerConnection>scm:git:https://github.com/subtlelib/poi.git</developerConnection>
         <url>https://github.com/subtlelib/poi</url>
-    </scm>
+      <tag>poi.builder.parent-1.0.1</tag>
+  </scm>
 
     <distributionManagement>
         <repository>
