--- a/core/pom.xml
+++ b/core/pom.xml
@@ -43,5 +43,18 @@
             <artifactId>mockito-all</artifactId>
         </dependency>
     </dependencies>
+    
+    <build>
+    	<plugins>
+	        <plugin>
+	          <artifactId>maven-compiler-plugin</artifactId>
+	          <configuration>
+	            <source>1.6</source>
+	            <target>1.6</target>
+	            <fork>true</fork>
+	          </configuration>
+	        </plugin>
+    	</plugins>
+    </build>
 
 </project>
