Removed static fields from WorkbookContextFactory; now using proper default fonts in default styles (FontStyle)

--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
         <dependencies>
             <dependency>
                 <groupId>org.apache.poi</groupId>
-                <artifactId>poi</artifactId>
+                <artifactId>poi-ooxml</artifactId>
                 <version>${apache.poi.version}</version>
             </dependency>
             <dependency>
