--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.subtlelib</groupId>
         <artifactId>poi.builder.parent</artifactId>
-        <version>1.0.5-SNAPSHOT</version>
+        <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -19,10 +19,6 @@
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -43,18 +39,5 @@
             <artifactId>mockito-all</artifactId>
         </dependency>
     </dependencies>
-    
-    <build>
-    	<plugins>
-	        <plugin>
-	          <artifactId>maven-compiler-plugin</artifactId>
-	          <configuration>
-	            <source>1.6</source>
-	            <target>1.6</target>
-	            <fork>true</fork>
-	          </configuration>
-	        </plugin>
-    	</plugins>
-    </build>
 
 </project>
