--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         <sonatype.repo.url>https://oss.sonatype.org</sonatype.repo.url>
 
         <apache.poi.version>5.2.2</apache.poi.version>
-        <slf4j.version>1.7.9</slf4j.version>
+        <slf4j.version>1.7.36</slf4j.version>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
     </properties>
@@ -95,8 +95,8 @@
             </dependency>
             <dependency>
                 <groupId>org.mockito</groupId>
-                <artifactId>mockito-all</artifactId>
-                <version>1.9.5</version>
+                <artifactId>mockito-core</artifactId>
+                <version>4.6.1</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
