--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -4,11 +4,11 @@
 
     <parent>
         <groupId>com.github.subtlelib</groupId>
-        <artifactId>poi-builder.parent</artifactId>
+        <artifactId>poi-builder-parent</artifactId>
         <version>${revision}</version>
     </parent>
 
-    <artifactId>poi-builder.examples</artifactId>
+    <artifactId>poi-builder-examples</artifactId>
 
     <name>POI builder examples</name>
     <description>Usage examples for POI builder library</description>
@@ -17,7 +17,7 @@
     <dependencies>
         <dependency>
             <groupId>com.github.subtlelib</groupId>
-            <artifactId>poi-builder</artifactId>
+            <artifactId>poi-builder-core</artifactId>
             <version>${revision}</version>
         </dependency>
     </dependencies>
