--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.subtlelib</groupId>
-    <artifactId>poi-builder.parent</artifactId>
+    <artifactId>poi-builder-parent</artifactId>
     <version>${revision}</version>
     <packaging>pom</packaging>
 
