--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -2,24 +2,30 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>io.github.subtlelib</groupId>
-        <artifactId>poi-builder-parent</artifactId>
-        <version>1.1.0</version>
-    </parent>
-
+    <groupId>io.github.subtlelib</groupId>
     <artifactId>poi-builder-examples</artifactId>
+    <version>1.1.1-SNAPSHOT</version>
 
     <name>POI builder examples</name>
     <description>Usage examples for POI builder library</description>
     <url>https://github.com/subtlelib/poi</url>
-
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>io.github.subtlelib</groupId>
             <artifactId>poi-builder-core</artifactId>
-            <version>1.1.0</version>
+            <version>1.1.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
+    <repositories>
+        <repository>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+        </repository>
+    </repositories>
 
 </project>
